--- a/client/index.html
+++ b/client/index.html
@@ -32,7 +32,7 @@
           </select>
           <br />
           <label>Name: </label
-          ><input id="author" name="author" placeholder="author" type="text" />
+          ><input id="name" name="name" placeholder="name" type="text" />
           <br />
           <h4>Optional Fields</h4>
           <label>Composer: </label
